2018-05-29  Tom de Vries  <tom@codesourcery.com>

	* lib/scanasm.exp (scan-stack-usage, scan-stack-usage-not)
	(scan-ada-spec, scan-ada-spec-not, scan-lto-assembler):
	Use proc name as first argument to dg-scan.

2018-05-29  Tom de Vries  <tom@codesourcery.com>

	* lib/scanasm.exp (scan-hidden, scan-not-hidden): Handle being called
	with no arguments.

2018-05-28  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/85934
	* gcc.target/i386/pr85934.c: New testcase.

2018-05-28  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/renaming12.adb, gnat.dg/renaming12.ads: New testcase.

2018-05-28  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/rep_clause6.adb, gnat.dg/rep_clause6.ads: New testcase.

2018-05-28  Ed Schonberg  <schonberg@adacore.com>

	* gnat.dg/fixedpnt5.adb: New testcase.

2018-05-28  Justin Squirek  <squirek@adacore.com>

	* gnat.dg/array31.adb: New testcase.

2018-05-28  Justin Squirek  <squirek@adacore.com>

	* gnat.dg/warn15-core-main.adb, gnat.dg/warn15-core.ads,
	gnat.dg/warn15-interfaces.ads, gnat.dg/warn15.ads: New testcase.

2018-05-27  Steven G. Kargl  <kargl@gcc.gnu.org>

	* gfortran.dg/data_stmt_pointer.f90: new test.

2018-05-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/85918
	* gcc.target/i386/avx512dq-pr85918.c: New test.

2018-05-25  Jim Wilson  <jimw@sifive.com>

	* gcc.target/riscv/interrupt-1.c: New.
	* gcc.target/riscv/interrupt-2.c: New.
	* gcc.target/riscv/interrupt-3.c: New.
	* gcc.target/riscv/interrupt-4.c: New.
	* gcc.target/riscv/interrupt-5.c: New.

2018-05-25  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/85786
	* gfortran.dg/pr85786.f90: New test.

2018-05-25  Paul Koning  <ni1d@arrl.net>

	* gcc.c-torture/compile/20151204.c: Skip if pdp11.
	* gcc.c-torture/compile/pr55921.c: Ditto.
	* gcc.c-torture/compile/pr60655-1.c: Ditto.
	* gcc.c-torture/compile/vector-align-1.c: Add max alignment if pdp11.

2018-05-25  Jakub Jelinek  <jakub@redhat.com>

	PR target/85832