@@ -1,5 +1,13 @@
 2018-05-29  Tom de Vries  <tom@codesourcery.com>
 
+	* lib/scanasm.exp (scan-assembler-times): Use proc name in error
+	message.
+	* lib/scanipa.exp (scan-ipa-dump-times): Same.
+	* lib/scanrtl.exp (scan-rtl-dump-times): Same.
+	* lib/scantree.exp (scan-tree-dump-times): Same.
+
+2018-05-29  Tom de Vries  <tom@codesourcery.com>
+
 	* lib/scanasm.exp (scan-stack-usage, scan-stack-usage-not)
 	(scan-ada-spec, scan-ada-spec-not, scan-lto-assembler):
 	Use proc name as first argument to dg-scan.
